get performance api
